--- a/src/components/genre-view/genre-view.scss
+++ b/src/components/genre-view/genre-view.scss
@@ -1,3 +1,9 @@
 
 .genre-view {
+  margin-top: 120px;
+  min-height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
